--- a/trabalho_ac/trabalho_ac.csproj
+++ b/trabalho_ac/trabalho_ac.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEEE754.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
