--- a/trabalho_ac/trabalho_ac.csproj
+++ b/trabalho_ac/trabalho_ac.csproj
@@ -47,6 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IEEE754.cs" />
+    <Compile Include="classes\Ula24Bits.cs" />
+    <Compile Include="classes\Ula8Bits.cs" />
+    <Compile Include="classes\Ula.cs" />
+    <Compile Include="classes\SomadorCompleto.cs" />
+    <Compile Include="classes\Decodificador.cs" />
+    <Compile Include="classes\Circuito.cs" />
+    <Compile Include="classes\UnidadeLogica.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +83,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Reference Include="POO_PortasLogicas">
+      <HintPath>.\POO_PortasLogicas.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
